@@ -1,3 +1,7 @@
+2000-08-17  Kazu Hirata  <kazu@hxi.com>
+
+	* dwarf2dbg.c: Fix formatting.
+
 2000-08-17  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-arm.c (decode_shift): Allow illegal shifts by zero
